gcp/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-server-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "somaz-gke-grafana-lb-ip"
    networking.gke.io/managed-certificates: "grafana-certificate"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: grafana-frontend-config
spec:
  rules:
  - host: grafana.somaz.link
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 80
